--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
-    "manifest_version": 3,
-    "name": "Categories Checker Extension",
-    "version": "1.0",
-    "description": "A simple Chrome extension that checks the validity of PredictLeads categories.",
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "permissions": []
-  }
+  "manifest_version": 3,
+  "name": "Categories Checker Extension",
+  "version": "1.0",
+  "description": "A simple Chrome extension that checks the validity of PredictLeads categories.",
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icons/icon48.png"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "permissions": []
+}
